# Generated by Django 5.0.6 on 2026-06-27 20:24

import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="WeatherData",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("location", models.CharField(max_length=255)),
                ("temperature", models.FloatField()),
                ("humidity", models.FloatField()),
                ("rainfall", models.FloatField(help_text="Précipitations en mm")),
                ("forecast_date", models.DateField()),
                ("created_at", models.DateTimeField(auto_now_add=True)),
            ],
            options={
                "verbose_name_plural": "Weather data",
            },
        ),
    ]
